--- a/Installing/Route/package.json
+++ b/Installing/Route/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "localforage": "^1.10.0",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
